# Sourcetrail

./: .dockerignore  .gitattributes  AUTHORS.txt  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  DOCUMENTATION.md  vcpkg.json
.github/workflows/: call-cmake-multi-platform.yml  dispatch-github-hosted-runner.yml  dispatch-self-hosted-runner.yml
cmake/: licenses.cmake
cmake/installdirs/: linux.cmake  windows.cmake
cmake/package/: linux.cmake.in  macos.cmake.in  windows.cmake.in
cmake/qt/: application.desktop.in  qt5_deploy_support.cmake.in  qt5_macros.cmake
deployment/linux/appimage/: sourcetrail.desktop
deployment/linux/dockerfiles/self-hosted/: Dockerfile
deployment/linux/dockerfiles/vcpkg-cache-http/: Dockerfile
deployment/linux/self-hosted-builder/: docker-compose.yml
deployment/linux/self-hosted-runner/: docker-compose.yml
deployment/windows/dockerfiles/self-hosted/: Dockerfile
deployment/windows/dockerfiles/vcpkg-cache-http/: Dockerfile
deployment/windows/self-hosted-builder/: docker-compose.yml
deployment/windows/self-hosted-runner/: docker-compose.yml
ide_plugins/atom/: README.md
ide_plugins/eclipse/: README.md
ide_plugins/emacs/: README.md
ide_plugins/idea/: README.md
ide_plugins/qt_creator/: README.md
ide_plugins/sublime_text/: README.md
ide_plugins/vim/: README.md
ide_plugins/visual_studio/: README.md
ide_plugins/vscode/: README.md
script/: download_python_indexer.sh
src/lib_cxx/data/parser/cxx/: CanonicalFilePathCache.cpp  ClangInvocationInfo.cpp  CxxAstVisitorComponentBraceRecorder.cpp  CxxAstVisitorComponentIndexer.cpp  CxxDiagnosticConsumer.cpp  CxxParser.cpp  PreprocessorCallbacks.cpp  PreprocessorCallbacks.h  utilityClang.cpp  utilityClang.h
src/lib_cxx/data/parser/cxx/name_resolver/: CxxDeclNameResolver.cpp  CxxTemplateArgumentNameResolver.cpp
src/lib_gui/qt/project_wizard/content/: QtProjectWizardContentSelect.cpp
src/lib_gui/qt/window/: QtAbout.cpp  QtMainWindow.cpp  QtStartScreen.cpp
src/lib_gui/utility/: utilityApp.cpp
src/lib_gui/utility/path_detector/jre_system_library/: JreSystemLibraryPathDetector.cpp
testing/project_setup/custom_command_python/: checklist.txt
vcpkg-overlay/ports/llvm/11.0.0#3/: 0004-fix-dr-1734.patch  0005-fix-tools-path.patch  0007-build-only-sourcetrail-required.patch  CONTROL  portfile.cmake
vcpkg-overlay/ports/llvm/16.0.6/: 0001-Fix-install-paths.patch  0005-Fix-tools-install-path.patch  portfile.cmake  vcpkg.json
vcpkg-overlay/scripts/toolchains/: linux.cmake  osx.cmake  windows.cmake
vcpkg-overlay/triplets/: x64-linux-debug.cmake  x64-linux.cmake  x64-osx-debug.cmake  x64-osx.cmake  x64-windows-debug-v143.cmake  x64-windows-debug.cmake  x64-windows.cmake  x86-windows-debug-v143.cmake  x86-windows-debug.cmake  x86-windows-v143.cmake  x86-windows.cmake
vcpkg-overlay/triplets/windows/: port.cmake
